--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>Skúli Arnarsson</title>
 </head>
 <body>
-	Hello this will be ready tonight
+	<p>Hello this will be ready tonight</p>
 </body>
 </html>
