--- a/index.html
+++ b/index.html
@@ -79,10 +79,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded mb-4">I am a 23 year old computer scientist with a focus on web development and user
+                interface design. I am currently looking full time work in the field. I gratuate from the University of Reykjavík in late 2018, however I only have 2 courses remaining to finish my degree.
+                My interests include technology, programming, alternative and electronic music, video games,
+                exploring the world and experiencing different cultures. I’m a responsible and an extremely reliable employee. I am very quick at learning
+                and mastering new technologies and I like working alongside others in a team. I am most interested in working in web- or app
+                development. I am healthy and don’t smoke. I don’t have a criminal record. I have a driver's licence and I own a car. I am fully willing to
+                relocate for a job.</p>
           </div>
         </div>
       </div>
@@ -295,20 +300,16 @@
           </div>
           <div class="col-lg-1 mr-auto text-center">
             <i class="fa fa-linkedin fa-3x mb-3 sr-contact"></i>
-            <p>
+            <p class="center-fix">
               <a href="https://www.linkedin.com/in/skulipardus/" target="_blank">Linkedin</a>
             </p>
           </div>
-          <div class="col-lg-1 mr-auto text-center ">
+          <div class="col-lg-1 mr-auto text-center">
               <i class="fa fa-instagram fa-3x mb-3 sr-contact"></i>
-              <p>
+              <p class="center-fix">
                 <a href="https://www.instagram.com/skulipardus/" target="_blank">Instagram</a>
               </p>
             </div>
-            <!-- centering fix -->
-            <!-- margin-left: -100%;
-            margin-right: -100%;
-            text-align: center; -->
         </div>
       </div>
     </section>
