--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             </a>
           </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/skulia15/Web-Programming-2/tree/master/Pizzerio%20Uno" target="_blank">
+          <a class="portfolio-box" href="https://github.com/skulia15/" target="_blank">
             <img class="img-fluid" src="img/portfolio/fullsize/github.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
