--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="author" content="">
 
   <title>Skúli Arnarsson</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+  <link rel="manifest" href="img/fav/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,6 +35,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body id="page-top">
@@ -46,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#strengths">Strengths</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -99,7 +106,7 @@
     </div>
   </section>
 
-  <section id="services">
+  <section id="strengths">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -165,6 +172,202 @@
             <i class="fa fa-4x hand-spock-o fa-hand-spock-o text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Technology Nerd</h3>
             <p class="text-muted mb-0">If you need a solution to a technology problem, I'm the first one you should ask.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="languages">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">Programming Languages</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row centered-row">
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/javascript.png" alt="">
+            <h4 class="mb-3">JavaScript</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/csharp.png" alt="">
+            <h4 class="mb-3">C#</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/c++.png" alt="">
+            <h4 class="mb-3">C++</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/c.png" alt="">
+            <h4 class="mb-3">C</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/python.jpg" alt="">
+            <h4 class="mb-3">Python</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/java.jpg" alt="">
+            <h4 class="mb-3">Java</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/html5.png" alt="">
+            <h4 class="mb-3">HTML5</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/css3.png" alt="">
+            <h4 class="mb-3">CSS3</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/sql.png" alt="">
+            <h4 class="mb-3">SQL</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/bash.png" alt="">
+            <h4 class="mb-3">Bash</h4>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section id="technologies">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">Technologies</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row centered-row">
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/vue.png" alt="">
+            <h4 class="mb-3">Vue.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/react.png" alt="">
+            <h4 class="mb-3">React</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/node.png" alt="">
+            <h4 class="mb-3">Node.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/ex.png" alt="">
+            <h4 class="mb-3">Express.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/dotnet.png" alt="">
+            <h4 class="mb-3">.NET</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/bootstrap.png" alt="">
+            <h4 class="mb-3">Bootstrap</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/xamarin.png" alt="">
+            <h4 class="mb-3">Xamarin</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/mocha.png" alt="">
+            <h4 class="mb-3">Mocha.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/pug.png" alt="">
+            <h4 class="mb-3">Pug</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/gulp.png" alt="">
+            <h4 class="mb-3">Gulp</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/webpack.png" alt="">
+            <h4 class="mb-3">webpack</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/bookshelf.png" alt="">
+            <h4 class="mb-3">Bookshelf</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/knex.png" alt="">
+            <h4 class="mb-3">Knex.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/psql.png" alt="">
+            <h4 class="mb-3">PostgreSQL</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/mysql.png" alt="">
+            <h4 class="mb-3">MySQL</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/git.png" alt="">
+            <h4 class="mb-3">Git</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/passport.png" alt="">
+            <h4 class="mb-3">Passport.js</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/ubuntu.png" alt="">
+            <h4 class="mb-3">Ubuntu</h4>
           </div>
         </div>
       </div>
@@ -255,65 +458,65 @@
 
   <!-- MovieApp Modal -->
   <div class="modal fade" id="movieAppModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">MovieHub</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div id="movieappIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#movieappIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#movieappIndicators" data-slide-to="1"></li>
-                <li data-target="#movieappIndicators" data-slide-to="2"></li>
-                <li data-target="#movieappIndicators" data-slide-to="3"></li>
-                <li data-target="#movieappIndicators" data-slide-to="4"></li>
-                <li data-target="#movieappIndicators" data-slide-to="5"></li>
-                <li data-target="#movieappIndicators" data-slide-to="6"></li>
-                <li data-target="#movieappIndicators" data-slide-to="7"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/splash.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp1.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp2.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp3.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp4.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp5.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp6.jpg" alt="">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/fullsize/movieapp7.jpg" alt="">
-                </div>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">MovieHub</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="movieappIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#movieappIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#movieappIndicators" data-slide-to="1"></li>
+              <li data-target="#movieappIndicators" data-slide-to="2"></li>
+              <li data-target="#movieappIndicators" data-slide-to="3"></li>
+              <li data-target="#movieappIndicators" data-slide-to="4"></li>
+              <li data-target="#movieappIndicators" data-slide-to="5"></li>
+              <li data-target="#movieappIndicators" data-slide-to="6"></li>
+              <li data-target="#movieappIndicators" data-slide-to="7"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/portfolio/fullsize/splash.jpg" alt="">
               </div>
-              <a class="carousel-control-prev" href="#movieappIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#movieappIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp1.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp2.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp3.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp4.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp5.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp6.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/portfolio/fullsize/movieapp7.jpg" alt="">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#movieappIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#movieappIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
       </div>
     </div>
+  </div>
   <section class="p-0" id="portfolio">
     <div class="container">
       <div class="row">
@@ -357,20 +560,20 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="https://github.com/skulia15/Web-Programming-2/tree/master/Pizzerio%20Uno" target="_blank">
-              <img class="img-fluid" src="img/portfolio/fullsize/pizzeria-uno.png" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    React Application
-                  </div>
-                  <div class="project-name">
-                    Pizzeria Uno
-                  </div>
+          <a class="portfolio-box" href="https://github.com/skulia15/Web-Programming-2/tree/master/Pizzerio%20Uno" target="_blank">
+            <img class="img-fluid" src="img/portfolio/fullsize/pizzeria-uno.png" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">
+                  React Application
+                </div>
+                <div class="project-name">
+                  Pizzeria Uno
                 </div>
               </div>
-            </a>
-          </div>
+            </div>
+          </a>
+        </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/skulia15/" target="_blank">
             <img class="img-fluid" src="img/portfolio/fullsize/github.png" alt="">
