--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="My personal page" content="">
+  <meta name="Skúli Arnarsson" content="">
 
   <title>Skúli Arnarsson</title>
   <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
@@ -35,7 +34,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
   </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 </head>
 
 <body id="page-top">
@@ -54,6 +53,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#strengths">Strengths</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -178,7 +180,7 @@
     </div>
   </section>
 
-  <section id="languages">
+  <section id="skills">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
