--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
   </style>
-  
+
 </head>
 
 <body id="page-top">
@@ -316,6 +316,12 @@
           <div class="service-box mt-5 mx-auto">
             <img class="d-block pretty-img" src="img/portfolio/fullsize/pug.png" alt="">
             <h4 class="mb-3">Pug</h4>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
+          <div class="service-box mt-5 mx-auto">
+            <img class="d-block pretty-img" src="img/portfolio/fullsize/less.jpg" alt="">
+            <h4 class="mb-3">Less</h4>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6 text-center pretty-grid">
