--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h2 class="section-heading text-white">About Me</h2>
           <hr class="light my-4">
           <p class="text-white-faded mb-4">I am a 23 year old computer scientist with a focus on web development and user interface design. I am currently
-            looking full time work in the field. I gratuate from the University of Reykjavík in late 2018, however I only
+            looking full time work in the field. I graduate from the University of Reykjavík in late 2018, however I only
             have 2 courses remaining to finish my degree. My interests include technology, programming, alternative and electronic
             music, video games, exploring the world and experiencing different cultures. I’m a responsible and an extremely
             reliable employee. I am very quick at learning and mastering new technologies and I like working alongside others
