--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="sub-title mb-5">
-            I am an enthusiastic computer scientist specializing in web development. I am currently looking for a full time job in either
-            web-, software- and app-development.
+            I am an enthusiastic computer scientist specializing in web development. I currently work as a software specialist at Advania. I'm interested in new opportunities working with web-, software- or app-development.
           </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="/assets/resume.pdf" download="skuli-arnarsson-resume">My Resume</a>
         </div>
@@ -96,12 +95,11 @@
         <div class="col-lg-10 mx-auto text-center">
           <h2 class="section-heading text-white">About Me</h2>
           <hr class="light my-4">
-          <p class="text-white-faded mb-4">I am a 23 year old computer scientist with a focus on web development and user interface design. I am currently
-            looking full time work in the field. I graduate from the University of Reykjavík in late 2018, however I only
-            have 2 courses remaining to finish my degree. My interests include technology, programming, alternative and electronic
+          <p class="text-white-faded mb-4">I'm a 25 year old computer scientist specializing in web development and user interface design.
+            I graduated from the University of Reykjavík in 2018 with a Bs.c in computer science. My interests include technology, programming, alternative and electronic
             music, video games, exploring the world and experiencing different cultures. I’m a responsible and an extremely
             reliable employee. I am very quick at learning and mastering new technologies and I like working alongside others
-            in a team. I am most interested in working in web- or app development. I am healthy and don’t smoke. I don’t
+            in a team. I am most interested in working in web- or app development. I am healthy and I don’t smoke. I don’t
             have a criminal record. I have a driver's licence and I own a car. I am fully willing to relocate for a job.</p>
         </div>
       </div>
