remove instagram section

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
     </div>
   </section>
 
-  <section class="bg-white text-faded" id="photos">
+  <!-- <section class="bg-white text-faded" id="photos">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading insta">My Instagram</h2>
@@ -648,14 +648,14 @@
             <img class="img-fluid center-img" src="https://www.instagram.com/p/43_49zsvtl/media/?size=m" alt="">
           </a>
         </div>
-        <!-- <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="https://www.instagram.com/p/zFdr4LMvuh/media/?size=m">
-                <img class="img-fluid" src="https://www.instagram.com/p/zFdr4LMvuh/media/?size=m" alt="">
-              </a>
-            </div> -->
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" href="https://www.instagram.com/p/zFdr4LMvuh/media/?size=m">
+            <img class="img-fluid" src="https://www.instagram.com/p/zFdr4LMvuh/media/?size=m" alt="">
+          </a>
+        </div> 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="contact">
     <div class="container">
